@@ -10,6 +10,7 @@
     + Added subnet free space map for each possible subnet mask;
     + Added Vaults (Certificate andf password storing);
     + Added Tools->Duplicate subnets & IP page;
+    + Added config.php offline_mode to disable server-side Internet lookups (#3462);
 
     Enhancements, changes:
     ----------------------------
